--- a/MH-MapTool/maptool.css
+++ b/MH-MapTool/maptool.css
@@ -83,6 +83,10 @@
 	color: #ff7516;
 	text-shadow: 0px 0px 12px rgba(255, 55, 55, 1);
 }
+.citytext {
+	font-size: 14px;
+	text-shadow: 0px 0px 9px rgba(2, 2, 2, 1);
+}
 
 #debrisdiplay {
 	background: rgba(110, 110, 110, 0.3);
